apps/minio/base/networkpolicy-allow-from-grim-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-grim-backend
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: minio
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: grim
          podSelector:
            matchLabels:
              app.kubernetes.io/name: grim-backend
      ports:
        - protocol: TCP
          port: 9000
